@@ -1,3 +1,16 @@
 #!/usr/bin/env bash
 . ${sys}/share/openldap/${project}_${db_orga}.${db_suffix}.env
-ldappasswd $@
+# do not borrow LD LINKS from minitage as we can have more than one db in
+# environment and it can fuck up OpenLDAP binaries !
+unset LD_LIBRARY_PATH
+for a in \$@;do
+    if [[ \$a == -w* ]];then
+        passwordsupplied=True
+    fi
+    ARGS="\$ARGS \$a"
+done
+if [[ -z \$passwordsupplied ]];then
+    ARGS=" \$ARGS -W"
+fi
+ARGS=" \$ARGS -x "
+ldappasswd \$ARGS
