@@ -1,5 +1,6 @@
 #!/usr/bin/env bash
 #echo '. %s/share/minitage/minitage.env\n' % $sys
-export LDAPURI=ldap://$db_host:$db_port
-export LDAPBINDDN=cn=$db_user,dc=$db_orga,dc=$db_suffix
+
+export LDAPCONF=${sys}/etc/openldap/${project}_${db_orga}.${db_suffix}-ldap.conf
+export LDAPBINDDN="cn=$db_user,dc=$db_orga,dc=$db_suffix"
 
